# pokey-engine

./: .gitignore  Cargo.toml  pyproject.toml
examples/: observation.py
examples/observation/: observation.py  team1.txt  team2.txt  utilities.py
examples/observation/data/gen4/: abilities_dex.json  data.json  gen4_abilities_dex.json  gen4_dex.json  gen4_items_dex.json  gen4_moves_dex.json  gen4_types_dex.json  items_dex.json  moves_dex.json  natures.json  species_dex.json  typechart_dex.json
src/: lib.rs  mcts_ol.rs  mcts_ol_st.rs  pokezoo.rs  pymove.rs  pypokemon.rs  pyside.rs  pystate.rs
