[package]
name = "pokey-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pokey_engine"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.22.0"
poke-engine = { git = "https://github.com/RotomLearn/poke-engine", features = [
  "gen4",
] }
